The <.travis.yml> config has been changed to a simpler and older one.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
+dist: trusty
+sudo: required
+
 language: cpp
 compiler: g++
 
 dist: xenial
 
-script:
-  - git ls-files src/ | xargs clang-format -i && git diff --exit-code && cmake
+script: 
+    - git ls-files src/ | xargs clang-format -i && git diff --exit-code && make
